# zhen-subnet

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.miner  Dockerfile.validator  LICENSE  README.md  docker-compose.yml  env.example  llms.txt  pyproject.toml
.claude/agents/: docs-agent.md  infra-agent.md  miner-agent.md  protocol-agent.md  simulation-agent.md  validator-agent.md
.claude/commands/: zhen-build-case.md  zhen-lint.md  zhen-score-test.md  zhen-sim-test.md
.github/workflows/: ci.yml
agents/: AGENTS.md
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  MECHANISM.md  MINE.md  ROADMAP.md  RULES.md  SCORING.md  VALIDATE.md
eval/: __init__.py  harness.py
miner/: __init__.py  config.py  main.py
miner/calibration/: __init__.py  bayesian.py  engine.py  evolutionary.py  objective.py  surrogate.py
miner/network/: __init__.py  axon_handler.py  result_sender.py
miner/simulation/: __init__.py  simulator_cache.py  simulator_runner.py
miner/utils/: __init__.py  logging.py
protocol/: __init__.py  synapse.py
registry/: manifest.json
scoring/: __init__.py  ashrae.py  ema.py  engine.py  metrics.py  normalization.py  report.py  report_builder.py
scripts/: auto_update.sh  regen_bestest_air_weather.py  start_miner.sh  start_validator.sh
simulation/: __init__.py  rc_network.py  reduced_energyplus.py  zhen_simulator.py
tests/: __init__.py  conftest.py
tests/adversarial/: __init__.py  test_scoring_adversarial.py
tests/integration/: __init__.py  test_boptest_live.py  test_miner_calibration.py  test_round_loop.py
tests/unit/: test_alerts.py  test_ashrae.py  test_boptest_client.py  test_calibration.py  test_chain_op.py  test_chain_timeouts.py  test_ema.py  test_manifest.py  test_miner_blacklist.py  test_miner_registration_check.py  test_monthly_metrics.py  test_rc_network.py  test_red_team.py  test_report.py  test_report_pipeline.py  test_response_parser.py  test_scoring.py  test_scoring_db.py  test_state.py  test_synapse.py  test_validator_loops.py  test_validator_round.py  test_verification.py  test_weather_data.py  test_weight_commit_composition.py  test_weight_commit_watchdog.py  test_weight_gating.py  test_weight_loop_logging.py  test_weight_setter_errors.py  test_window_ema.py
validator/: __init__.py  alerts.py  config.py  health.py  main.py  scoring_db.py  state.py
validator/dashboard/: __init__.py  api.py  (+1 more)
(+39 files in other folders)
